added statusIntent
